--- a/asset/css/settings/global.scss
+++ b/asset/css/settings/global.scss
@@ -5,7 +5,31 @@
 }
 body{
     overflow: hidden;
-    
+    &::-webkit-scrollbar {
+        transition: all 0.8s ease-in-out;
+      }
+      &::-webkit-scrollbar-track {
+         
+          transition: all 0.8s ease-in-out;
+        
+      }
+      &::-webkit-scrollbar-thumb {
+        background: rgb(92, 78, 78); 
+        
+      }
+    &.unhide{
+        overflow-y: scroll !important;
+        &::-webkit-scrollbar{
+            width: 10px;
+        }
+        &::-webkit-scrollbar-track{
+            width: 50px;
+            background: transparent; 
+        }
+        &::-webkit-scrollbar-thumb{
+            border-radius: 60px;
+        }
+    }
 }
 html{
     scroll-behavior: smooth;
@@ -33,10 +57,10 @@ input:focus,textarea:focus{
     outline: none;
 }
 p{
-    line-height: 28px;
+    
 }
 h1{
-    line-height: 48px;
+    
 }
 ul{
     display: block;
