--- a/asset/css/common/mixin/mixin.scss
+++ b/asset/css/common/mixin/mixin.scss
@@ -2,7 +2,15 @@
     height: $height;
     width: 100%;
 }
-@mixin font($kg:400) {
-    font-family: 'Quicksand', sans-serif;
+@mixin fontJP($kg:400) {
+    font-family: 'Noto Sans JP', sans-serif;
+    font-weight: $kg;
+}
+@mixin fontPlay($kg:400) {
+    font-family: 'Playfair Display', serif;
+    font-weight: $kg;
+}
+@mixin fontBar($kg:400) {
+    font-family: 'Barlow Condensed', sans-serif;
     font-weight: $kg;
 }
