--- a/asset/css/settings/variables.scss
+++ b/asset/css/settings/variables.scss
@@ -2,5 +2,5 @@ $bg-2:#1b1d1f;
 $bg-1:linear-gradient(to left,#6442ff 0%,#9012fe 100%);
 $bg-3:#f7f7f7;
 $text-red:#e9168c;
-$text-black:#303133;
+$text-black:#2F2E2E;
 $text-grey:#777777;
