--- a/asset/css/layout/header.scss
+++ b/asset/css/layout/header.scss
@@ -14,27 +14,103 @@
         right: 0;
         z-index: 5;
         transition: transform 1s cubic-bezier(.55,.085,0,.99);
+        width: 100%;
+        display: flex;
+        align-items: center;
         &.hide{
             transform: translateY(-100%);
         }
         & .section-content{
-            height: 100%;
+            height: auto;
             width: 100%;
-            display: flex;
-           justify-content: center;
             opacity: 0;
             scale: 1.2;
             color: #fff;
             transition: all 1.5s ease-in-out;
-            
             &.active{
                 opacity: 1;
-                scale: 1;
+            }
+            &__image{
+                height: 100%;
+                width: 100%;
+                background-position: center center;
+                background-repeat: no-repeat;
+                background-size: cover;
+                background-attachment: fixed;
+                background-image: url(/asset/image/laptop_cup_glasses_plant_114948_1920x1080.jpg);
             }
             &__intro{
                 @include fontBar(300);
                 color: $text-black;
                 letter-spacing: 3px;
+                text-align: left;
+                display: block;
+                margin-bottom: 30px;
+                font-size: 50px;
+            }
+            &__info{
+                background-color: $text-black;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                width: 100%;
+                height: 100%;
+                flex-direction: column;
+                font-family: 'Elle futura';
+                font-weight: 400;
+                color: rgb(235, 221, 221);
+                & .content__info-img{
+                    width: 135px;
+                    height: 150px;
+                    border-radius: 100%;
+                    margin-bottom: 25px;
+                    margin-top: 30px;
+
+                }
+                & .content__info-name{
+                    font-size: 26px;
+                    font-weight: 500;
+                    margin-bottom: 10px;
+                }
+                & .content__info-position{
+                    margin-bottom: 20px;
+                    font-size: 19px;
+                }
+                & .content__info-section{
+                    font-size: 15px;
+                    margin-bottom: 10px;
+                    
+                }
+                & .content__info-info{
+                    font-size: 17px;
+                    margin-bottom: 20px;
+                    text-align: center;
+                }
+                & .content__info-icon{
+                    width: 100%;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    margin-bottom: 30px;
+                    & i:nth-child(1){
+                        margin-right: 20px;
+                        cursor: pointer;
+                    }
+                    & i:nth-child(2){
+                        margin-right: 20px;
+                        cursor: pointer;
+                    }
+                    & i:nth-child(3){
+                        cursor: pointer;
+                    }
+                }
+            }
+            &__direction{
+                margin-top: 20px;
+                color: $text-black;
+                text-align: center;
+                @include fontBar(500);
+                font-size: 25px;
             }
             
         }
@@ -42,13 +118,66 @@
     }
     & .section-2{
         height: 100vh;
-        background-color: rgb(68, 68, 128);
+        background:url('/asset/image/7070699_orig.jpg') $text-black  repeat-y;
+        background-size:  auto 50%;
+        background-position: bottom right;
+        background-repeat: no-repeat;
         position:absolute;
         top: 0;
         left: 0;
         right: 0;
         z-index: 4;
         transition: transform 1s cubic-bezier(.55,.085,0,.99);
+        &__intro{
+            @include fontBar(300);
+                color: #fff;
+                letter-spacing: 3px;
+                
+                text-align: left;
+                display: block;
+                margin-bottom: 30px;
+                font-size: 50px;
+                position: absolute;
+                top: 0;
+                left: 30px;
+           
+                &:nth-child(1){
+                    opacity: 1;
+                    
+                }
+                &:nth-child(2){
+                    top: 40px;
+                    opacity: 0.9;
+                }
+                &:nth-child(3){
+                    top: 80px;
+                    opacity: 0.8;
+                }
+                &:nth-child(4){
+                    top: 120px;
+                    opacity: 0.7;
+                }
+                &:nth-child(5){
+                    top: 160px;
+                    opacity: 0.6;
+                }
+                &:nth-child(6){
+                    top: 200px;
+                    opacity: 0.5;
+                }
+                &:nth-child(7){
+                    top: 240px;
+                    opacity: 0.4;
+                }
+                &:nth-child(8){
+                    top: 280px;
+                    opacity: 0.3;
+                }
+                &:nth-child(9){
+                    top: 320px;
+                    opacity: 0.2;
+                }
+        }
         &.hide{
             transform: translateY(-100%);
         }
@@ -57,20 +186,37 @@
             width: 100%;
             display: flex;
            justify-content: center;
+           align-items: center;
             opacity: 0;
             scale: 1.2;
-            color: #fff;
+            
             transition: all 1.5s ease-in-out;
+           
             
             &.active{
                 opacity: 1;
                 scale: 1;
             }
-            & h1{
-                @include fontJP(300);
-                border:1px solid
+            &__center{
+                height: auto;
+                background-color: #fff;
+                
+                margin-top: 160px;
+                opacity: 1;
+                padding: 30px;
+                & .content__center-title{
+                    @include fontBar(400);
+                    color: $text-black;
+                    font-size: 30px;
+                    text-transform: uppercase;
+                    margin-bottom: 30px;
+                }
+                & .content__center-story{
+                    font-family: 'Elle Futura';
+                    font-size: 18px;
+                    margin-bottom: 30px;
+                }
             }
-            
         }
     }
     & .section-3{
@@ -99,10 +245,7 @@
                 opacity: 1;
                 scale: 1;
             }
-            & h1{
-                @include fontJP(300);
-                border:1px solid
-            }
+           
             
         }
     }
@@ -132,10 +275,7 @@
                 opacity: 1;
                 scale: 1;
             }
-            & h1{
-                @include fontJP(300);
-                border:1px solid
-            }
+           
             
         }
     }
@@ -165,10 +305,7 @@
                 opacity: 1;
                 scale: 1;
             }
-            & h1{
-                @include fontJP(300);
-                border:1px solid
-            }
+           
             
         }
     }
@@ -176,43 +313,137 @@
     .dot{
         position: fixed;
         height: 100vh;
-        right: 10px;
+        right: 0;
         bottom: 0;
         top: 0;
-        width: 50px;
-        background-color: transparent;
+        background-color: #fff;
         z-index: 6;
         display: flex;
-        justify-content: center;
+        width: 100px;
+        justify-content: space-between;
         align-items: center;
         flex-direction: column;
-        &-section{
-            height: 10px;
-            width: 10px;
-            border-radius: 50%;
+        &::before{
+            content: "";
+            width: 1px;
+            background-color: $text-black;
+            position: absolute;
+            top: 0;
+            left: 50%;
+            right: 50%;
+            bottom: 0;
+            z-index: 1;
+        }
+        &-center{
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            z-index: 2;
             background-color: #fff;
-            transition: all .3s ease;
-            cursor: pointer;
-            &.color-act{
-                background-color: #c32865;
-                transform: scale(1.6);
+            padding-bottom: 30px;
+            & .dot-section{
+                background-color: transparent;
+                transition: all .3s ease;
+                cursor: pointer;
+                @include fontBar(500);
+                font-size: 18px;
+                text-align: center;
+                color: $text-black;
+                &.color-act{
+                    font-size: 22px;
+                    color: #ACACAC;
+                }
+            }
+
+        }
+        &-icon{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: left;
+            padding-bottom: 30px;
+            font-size: 20px;
+            text-align: left;
+            z-index: 2;
+            background-color: #fff;
+            padding-top: 30px;
+            
+            & i:nth-child(1){
+                margin-bottom: 20px;
+                cursor: pointer;
+                color: $text-black;
+                &:hover{
+                    color: #ACACAC;
+                }
+            }
+            & i:nth-child(2){
+                margin-bottom: 20px;
+                cursor: pointer;
+                color: $text-black;
+                &:hover{
+                    color: #ACACAC;
+                }
+            }
+            & i:nth-child(3){
+                margin-bottom: 10px;
+                cursor: pointer;
+                color: $text-black;
+                &:hover{
+                    color: #ACACAC;
+                }
             }
         }
+        
         &-section:nth-child(1){
-            margin-bottom: 30px;
+            margin-top: 50px;
+            margin-bottom: 10px;
         }
         &-section:nth-child(2){
-            margin-bottom: 30px;
+            margin-bottom: 10px;
         }
         &-section:nth-child(3){
-            margin-bottom: 30px;
+            margin-bottom: 10px;
         }
         &-section:nth-child(4){
-            margin-bottom: 30px;
+            margin-bottom: 10px;
         }
         &-section:nth-child(5){
 
         }
+        
+    }
+    @media screen and (max-width:991px) {
+          .dot{
+              background-color: transparent;
+              transition: background 0.3s ease-in-out;
+              &::before{
+                  display: none;
+              }
+              height: auto;
+              
+              &.dot-act{
+
+              }
+              &-icon{
+                  display: none;
+              }
+              &-center{
+                  background-color: transparent;
+                  
+                  & .dot-section{
+                      color: rgba(33, 34, 34, 0.7);
+                     
+                      &.color-act{
+                          opacity: 1;
+                      }
+                  }
+
+              }
+              &:hover{
+                    background-color: #fff; 
+                }
+          }  
+
     }
 }
 
